; ModuleID = '/home/carl/AnghaBench/vlc/lib/extr_audio.c_libvlc_audio_equalizer_set_amp_at_index.c'
source_filename = "/home/carl/AnghaBench/vlc/lib/extr_audio.c_libvlc_audio_equalizer_set_amp_at_index.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { float* }

@EQZ_BANDS_MAX = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @libvlc_audio_equalizer_set_amp_at_index(%struct.TYPE_3__* %0, float %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.TYPE_3__*, align 8
  %6 = alloca float, align 4
  %7 = alloca i32, align 4
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %5, align 8
  store float %1, float* %6, align 4
  store i32 %2, i32* %7, align 4
  %8 = load i32, i32* %7, align 4
  %9 = load i32, i32* @EQZ_BANDS_MAX, align 4
  %10 = icmp uge i32 %8, %9
  br i1 %10, label %15, label %11

11:                                               ; preds = %3
  %12 = load float, float* %6, align 4
  %13 = call i64 @isnan(float %12)
  %14 = icmp ne i64 %13, 0
  br i1 %14, label %15, label %16

15:                                               ; preds = %11, %3
  store i32 -1, i32* %4, align 4
  br label %33

16:                                               ; preds = %11
  %17 = load float, float* %6, align 4
  %18 = fcmp olt float %17, -2.000000e+01
  br i1 %18, label %19, label %20

19:                                               ; preds = %16
  store float -2.000000e+01, float* %6, align 4
  br label %25

20:                                               ; preds = %16
  %21 = load float, float* %6, align 4
  %22 = fcmp ogt float %21, 2.000000e+01
  br i1 %22, label %23, label %24

23:                                               ; preds = %20
  store float 2.000000e+01, float* %6, align 4
  br label %24

24:                                               ; preds = %23, %20
  br label %25

25:                                               ; preds = %24, %19
  %26 = load float, float* %6, align 4
  %27 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %28 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %27, i32 0, i32 0
  %29 = load float*, float** %28, align 8
  %30 = load i32, i32* %7, align 4
  %31 = zext i32 %30 to i64
  %32 = getelementptr inbounds float, float* %29, i64 %31
  store float %26, float* %32, align 4
  store i32 0, i32* %4, align 4
  br label %33

33:                                               ; preds = %25, %15
  %34 = load i32, i32* %4, align 4
  ret i32 %34
}

declare dso_local i64 @isnan(float) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
